--- a/package.json
+++ b/package.json
@@ -4,14 +4,19 @@
   "description": "Demonstrate frequency and amplitude modulation in JS",
   "main": "server.js",
   "dependencies": {
+    "bootstrap": "^4.0.0",
     "chroma-js": "^1.3.4",
-    "jquery": "^3.2.1",
+    "jquery": "^3.3.1",
     "jquery-mobile": "^1.5.0-alpha.1",
-    "node-static": "^0.7.6"
+    "node-static": "^0.7.6",
+    "popper": "^1.0.1",
+    "popper.js": "^1.12.9"
   },
   "devDependencies": {
+    "ajv": "^6.2.0",
     "babel-loader": "^7.1.2",
-    "webpack": "^3.8.1"
+    "webpack": "^3.11.0",
+    "webpack-cli": "^2.0.9"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
